--- a/Style.css
+++ b/Style.css
@@ -10,42 +10,36 @@ html {
 
 body {
   font-family: montserrat;
-  width: 100%;
-}
-
-.center {
-  padding-left: calc(50% - 600px);
-  padding-right: calc(50% - 600px);
+  overflow-x: hidden;
 }
 
 .heading {
-  position: absolute;
   background: rgb(225, 255, 143);
   background-image: url(./imgs/Header_star.svg), url(./imgs/Header__star_medium.svg), url(./imgs/Header__star_little.svg), url(./imgs/Star__little_right.svg), url(./imgs/Star__medium_right.svg);
   background-position: 928px -333px, 63px 94px, 156px 69px, 948px 538px, 1013px 588px;
   background-repeat: no-repeat;
   height: 800px;
-  width: 100%;
-  background-size: auto;
-  left: 0;
-  top: 0;
-  padding-left: calc(50% - 600px);
-  padding-right: calc(50% - 600px);
+  display: flex;
+  flex-direction: column;
 }
 
 .header {
-  margin-bottom: 50px;
   font-size: 64px;
   font-weight: 700;
   line-height: 78px;
   margin-top: 196px;
   margin-bottom: 24px;
+  margin-left: 120px;
 }
 .header__text {
   font-size: 24px;
   font-weight: 400;
   line-height: 32px;
   margin-bottom: 48px;
+  margin-left: 120px;
+}
+.header__text_mobile {
+  display: none;
 }
 .header__text_bold {
   font-weight: bold;
@@ -61,6 +55,10 @@ body {
   font-weight: 600;
   width: 247px;
   height: 66px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 120px;
 }
 .header__button_scroll {
   scroll-behavior: smooth;
@@ -73,14 +71,13 @@ body {
 }
 
 .navbar {
-  position: absolute;
   background-color: rgb(188, 236, 48);
   -webkit-backdrop-filter: blur(50px);
           backdrop-filter: blur(50px);
-  width: 100%;
+  width: 3220px;
   left: 0;
   height: 90px;
-  margin-top: 156px;
+  margin-top: auto;
   padding-left: 19px;
   display: flex;
   flex-direction: row;
@@ -99,7 +96,6 @@ body {
   text-transform: uppercase;
 }
 .navbar__item_gap {
-  position: relative;
   right: -5px;
   font-size: 30px;
   font-weight: 700;
@@ -111,7 +107,6 @@ body {
 .about {
   padding-left: calc(50% - 600px);
   padding-right: calc(50% - 600px);
-  position: absolute;
   padding-top: 94px;
   left: 0;
   width: 100%;
@@ -226,19 +221,28 @@ a {
     background-size: cover;
     background-attachment: fixed;
     background-position: center;
+    overflow-x: hidden;
   }
   .heading {
     background-image: url(./imgs/Star__big_mobile.svg), url(./imgs/Star__medium_mobile.svg), url(./imgs/Star__little_mobile.svg), url(./imgs/Starmedium__right_mobile.svg), url(./imgs/Starlittle__right_mobile.svg);
     background-position: 220px -84px, 37px 97px, 91px 64px, 303px 660px, 272px 640px;
-    height: 730px;
+    height: 780px;
   }
   .header {
     font-size: 40px;
     font-weight: 700;
     line-height: 49px;
     text-align: center;
+    margin-top: 147px;
   }
   .header__text {
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 20px;
+    text-align: center;
+    display: none;
+  }
+  .header__text_mobile {
     font-size: 16px;
     font-weight: 400;
     line-height: 20px;
@@ -247,14 +251,19 @@ a {
   .header__button {
     display: block;
     margin: auto;
+    margin-top: 36px;
     width: 285px;
     height: 55px;
     font-size: 16px;
     line-height: 141.69%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
   .navbar {
     height: 51px;
-    margin-top: 131px;
+    width: 376px;
+    margin-top: 180px;
     gap: 88px;
     background-position: 166px 15px;
     background-size: 19px 19px;
