--- a/Style.scss
+++ b/Style.scss
@@ -10,43 +10,36 @@
 
 body {
     font-family: montserrat;
-    width: 100%;
+    overflow-x: hidden;
 }
 
-.center {
-  padding-left: calc(50% - 600px);
-  padding-right: calc(50% - 600px);
-  }
-
 .heading {
-  position: absolute;
   background: rgb(225, 255, 143);
   background-image: url(./imgs/Header_star.svg), url(./imgs/Header__star_medium.svg), url(./imgs/Header__star_little.svg),
   url(./imgs/Star__little_right.svg), url(./imgs/Star__medium_right.svg);
   background-position: 928px -333px, 63px 94px, 156px 69px, 948px 538px, 1013px 588px;
   background-repeat: no-repeat;
-  height: 800px; 
-  width: 100%;
-  background-size: auto;
-  left: 0;
-  top: 0;
-  padding-left: calc(50% - 600px);
-  padding-right: calc(50% - 600px);
+  height: 800px;
+  display: flex;
+  flex-direction: column;
 }
 
-
 .header {
-    margin-bottom: 50px;
     font-size: 64px;
     font-weight: 700;
     line-height: 78px;
     margin-top: 196px;
     margin-bottom: 24px;
+    margin-left: 120px;
     &__text {
     font-size: 24px;
     font-weight: 400;
     line-height: 32px;
     margin-bottom: 48px;
+    margin-left: 120px;
+    }
+    &__text_mobile {
+      display: none;
     }
     &__text_bold {
       font-weight: bold;
@@ -62,6 +55,10 @@ body {
     font-weight: 600;
     width: 247px;
     height: 66px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 120px;
     }
     &__button_scroll {
     scroll-behavior: smooth;
@@ -74,13 +71,12 @@ body {
   }
 
   .navbar {
-    position: absolute;
     background-color: rgb(188, 236, 48);
     backdrop-filter: blur(50px);
-    width: 100%;
+    width: 3220px;
     left: 0;
     height: 90px;
-    margin-top: 156px;
+    margin-top: auto;
     padding-left: 19px;
     display: flex;
     flex-direction: row;
@@ -98,7 +94,6 @@ body {
     text-transform: uppercase;
     }
     &__item_gap {
-    position: relative;
     right: -5px;
     font-size: 30px;
     font-weight: 700;
@@ -111,7 +106,6 @@ body {
   .about {
     padding-left: calc(50% - 600px);
     padding-right: calc(50% - 600px);
-    position: absolute;
     padding-top: 94px;
     left: 0;
     width: 100%;
