--- a/_mobile.scss
+++ b/_mobile.scss
@@ -1,5 +1,5 @@
 @media (max-width: 767px) {
-.center {
+    .center {
     padding-left: calc(50% - 767px/2);
     padding-right: calc(50% - 767px/2);
     display: flex;
@@ -10,19 +10,28 @@
     background-size: cover;
     background-attachment: fixed;
     background-position: center;
+    overflow-x: hidden;
     }
     .heading {
     background-image: url(./imgs/Star__big_mobile.svg), url(./imgs/Star__medium_mobile.svg), url(./imgs/Star__little_mobile.svg),
     url(./imgs/Starmedium__right_mobile.svg), url(./imgs/Starlittle__right_mobile.svg);
     background-position: 220px -84px, 37px 97px, 91px 64px, 303px 660px, 272px 640px;
-    height: 730px;
+    height: 780px;
     }
     .header {
     font-size: 40px;
     font-weight: 700;
     line-height: 49px;
     text-align: center;
+    margin-top: 147px;
     &__text {
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 20px;
+    text-align: center;
+    display: none;
+    }
+    &__text_mobile {
     font-size: 16px;
     font-weight: 400;
     line-height: 20px;
@@ -31,15 +40,20 @@
     &__button {
     display: block;
     margin: auto;
+    margin-top: 36px;
     width: 285px;
     height: 55px;
     font-size: 16px;
     line-height: 141.69%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     }
     }
     .navbar {
     height: 51px;
-    margin-top: 131px;
+    width: 376px;
+    margin-top: 180px;
     gap: 88px;
     background-position: 166px 15px;
     background-size: 19px 19px;
