--- a/Style.scss
+++ b/Style.scss
@@ -13,6 +13,11 @@ body {
     overflow-x: hidden;
 }
 
+.center {
+  padding-left: calc(50% - 600px);
+  padding-right: calc(50% - 600px);
+}
+
 .heading {
   background: rgb(225, 255, 143);
   background-image: url(./imgs/Header_star.svg), url(./imgs/Header__star_medium.svg), url(./imgs/Header__star_little.svg),
@@ -30,16 +35,12 @@ body {
     line-height: 78px;
     margin-top: 196px;
     margin-bottom: 24px;
-    margin-left: 120px;
     &__text {
+    display: block;
     font-size: 24px;
     font-weight: 400;
     line-height: 32px;
     margin-bottom: 48px;
-    margin-left: 120px;
-    }
-    &__text_mobile {
-      display: none;
     }
     &__text_bold {
       font-weight: bold;
@@ -58,7 +59,6 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-left: 120px;
     }
     &__button_scroll {
     scroll-behavior: smooth;
