--- a/_mobile.scss
+++ b/_mobile.scss
@@ -6,7 +6,6 @@
     flex-direction: column;
     align-items: center;
     flex-wrap: nowrap;
-    width: 343px;
     background-size: cover;
     background-attachment: fixed;
     background-position: center;
@@ -16,7 +15,7 @@
     background-image: url(./imgs/Star__big_mobile.svg), url(./imgs/Star__medium_mobile.svg), url(./imgs/Star__little_mobile.svg),
     url(./imgs/Starmedium__right_mobile.svg), url(./imgs/Starlittle__right_mobile.svg);
     background-position: 220px -84px, 37px 97px, 91px 64px, 303px 660px, 272px 640px;
-    height: 780px;
+    height: 820px;
     }
     .header {
     font-size: 40px;
@@ -24,6 +23,8 @@
     line-height: 49px;
     text-align: center;
     margin-top: 147px;
+    margin-bottom: 18px;
+    height: 368px;
     &__text {
     font-size: 16px;
     font-weight: 400;
@@ -32,17 +33,19 @@
     display: none;
     }
     &__text_mobile {
+    display: block;
     font-size: 16px;
     font-weight: 400;
     line-height: 20px;
     text-align: center;
+    height: 148px;
     }
     &__button {
     display: block;
     margin: auto;
-    margin-top: 36px;
+    margin-top: 6px;
     width: 285px;
-    height: 55px;
+    height: 102px;
     font-size: 16px;
     line-height: 141.69%;
     display: flex;
@@ -51,11 +54,11 @@
     }
     }
     .navbar {
-    height: 51px;
+    height: 98px;
     width: 376px;
-    margin-top: 180px;
+    margin-top: 210px;
     gap: 88px;
-    background-position: 166px 15px;
+    background-position: 166px 17px;
     background-size: 19px 19px;
     &__mobile {
     display: none;
@@ -69,7 +72,9 @@
     padding-top: 48px;
     height: 3958px;
     top: 781px;
-    &__header {
+    display: none;
+    }
+    /* &__header {
     display: none;
     color: white;
     }
@@ -82,8 +87,7 @@
     }
     &__text {
     display: none;
-    }
-    }
+    } */
     .games {
     display: grid;
     grid-template-columns: repeat(1, 4fr);
