--- a/Style.scss
+++ b/Style.scss
@@ -202,7 +202,97 @@ body {
     transform: scale(1.15);
     transition: transform 0.8s;
   }
+
+  .mini-games {
+    width: 100vw;
+    height: 3500px;
+    left: 0;
+    background-image: url(./imgs/Star__little_second.svg), url(./imgs/Star__medium_second.svg);
+    background-position: 1277px 93px, 1320px 126px;
+    background-repeat: no-repeat;
+    background: rgb(32, 32, 39);
+    color: white;
+    padding-top: 50px;
+    &__header {
+    font-size: 64px;
+    font-weight: 700;
+    line-height: 78px;
+    padding-left: 156px;
+    }
+    &__articles {
+      display: grid;
+    grid-template-columns: repeat(1, 6fr);
+    justify-content: start;
+    justify-items: center;
+    grid-column-gap: 32px;
+    gap: 32px;
+    padding-top: 72px;
+    }
+  }
+
+  .mini-articles {
+    width: 1200px;
+    height: 500px;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-content: flex-start;
+    align-items: center;
+    background-color: #fff;
+    color: black;
+    background-size: 90%;
+    border-radius: 47px;
+    gap: 24px;
+    &__name {
+    padding-top: 42px;
+    font-size: 48px;
+    font-weight: 700;
+    line-height: 59px;
+    }
+    &__text {
+    font-size: 24px;
+    font-weight: 400;
+    line-height: 32px;
+    }
+    &__button {
+    font-family: inherit;
+    border-radius: 60px;
+    border: 1px solid black;
+    background-color: black;
+    color: white;
+    font-family: Montserrat;
+    font-size: 24px;
+    font-weight: 600;
+    width: 247px;
+    height: 66px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    }
+    &__img {
+      height: 500px;
+      width: 600px;
+    }
+  }
+  .mini-articles__button:hover {
+    background-color: #fff;
+    color: black;
+    cursor: pointer;
+  }
+  .mini-articles:hover {
+    transform: scale(1.1);
+    transition: transform 0.8s;
+  }
+
+
   .footer {
-  display: none
+  height: 150px;
+  background-color: rgb(189, 237, 53);
+  color: black;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 20px;
+  text-align: center;
+  align-content: center;
 }
   @import 'mobile';
