--- a/Style.css
+++ b/Style.css
@@ -166,6 +166,7 @@ a {
   height: 473px;
   gap: 28px;
   width: 378px;
+  transition: all 0.8s;
 }
 .articles__height_second {
   height: 512px;
@@ -198,11 +199,11 @@ a {
 }
 .articles__button {
   display: none;
+  text-decoration: none;
 }
 
 .articles:hover {
   transform: scale(1.15);
-  transition: transform 0.8s;
 }
 
 .mini-games {
@@ -223,6 +224,8 @@ a {
   padding-left: 156px;
 }
 .mini-games__articles {
+  width: 1200px;
+  height: 500px;
   display: grid;
   grid-template-columns: repeat(1, 6fr);
   justify-content: start;
@@ -231,12 +234,26 @@ a {
   gap: 32px;
   padding-top: 72px;
 }
-
-.mini-articles {
+.mini-games__center {
   width: 1200px;
   height: 500px;
+  margin-left: 156px;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  align-content: flex-start;
+  justify-content: space-between;
+  align-items: flex-start;
+  background-color: #fff;
+  color: black;
+  background-size: 90%;
+  border-radius: 47px;
+  transition: all 0.8s;
+}
+
+.mini-articles {
+  display: flex;
+  flex-direction: row;
   flex-wrap: wrap;
   align-content: flex-start;
   align-items: center;
@@ -244,18 +261,21 @@ a {
   color: black;
   background-size: 90%;
   border-radius: 47px;
-  gap: 24px;
+  gap: 36px;
+  transition: all 0.8s;
 }
 .mini-articles__name {
   padding-top: 42px;
   font-size: 48px;
   font-weight: 700;
   line-height: 59px;
+  padding-left: 48px;
 }
 .mini-articles__text {
   font-size: 24px;
   font-weight: 400;
   line-height: 32px;
+  padding-left: 48px;
 }
 .mini-articles__button {
   font-family: inherit;
@@ -268,9 +288,7 @@ a {
   font-weight: 600;
   width: 247px;
   height: 66px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  margin-left: 46px;
 }
 .mini-articles__img {
   height: 500px;
@@ -283,9 +301,8 @@ a {
   cursor: pointer;
 }
 
-.mini-articles:hover {
+.mini-games__center:hover {
   transform: scale(1.1);
-  transition: transform 0.8s;
 }
 
 .footer {
