--- a/Style.css
+++ b/Style.css
@@ -207,13 +207,12 @@ a {
 }
 
 .mini-games {
-  width: 100vw;
   height: 3500px;
   left: 0;
-  background-image: url(./imgs/Star__little_second.svg), url(./imgs/Star__medium_second.svg);
-  background-position: 1277px 93px, 1320px 126px;
+  background-image: url(./imgs/Star__little_second.svg), url(./imgs/Star__medium_second.svg), url(./imgs/Star__little_second.svg), url(./imgs/Star__medium_second.svg);
+  background-position: 1318px 93px, 1360px 126px, 1312px 3414px, 1360px 3364px;
   background-repeat: no-repeat;
-  background: rgb(32, 32, 39);
+  background-color: rgb(32, 32, 39);
   color: white;
   padding-top: 50px;
 }
@@ -224,8 +223,6 @@ a {
   padding-left: 156px;
 }
 .mini-games__articles {
-  width: 1200px;
-  height: 500px;
   display: grid;
   grid-template-columns: repeat(1, 6fr);
   justify-content: start;
@@ -235,13 +232,10 @@ a {
   padding-top: 72px;
 }
 .mini-games__center {
-  width: 1200px;
-  height: 500px;
-  margin-left: 156px;
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
-  align-content: flex-start;
+  align-content: center;
   justify-content: space-between;
   align-items: flex-start;
   background-color: #fff;
@@ -292,7 +286,9 @@ a {
 }
 .mini-articles__img {
   height: 500px;
-  width: 600px;
+}
+.mini-articles__img_four {
+  border-radius: 8.5%;
 }
 
 .mini-articles__button:hover {
