--- a/Style.css
+++ b/Style.css
@@ -108,7 +108,6 @@ body {
   padding-left: calc(50% - 600px);
   padding-right: calc(50% - 600px);
   padding-top: 94px;
-  left: 0;
   width: 100%;
   height: 1470px;
   background: rgb(32, 32, 39);
@@ -145,6 +144,9 @@ body {
 .games__img {
   width: 378px;
 }
+.games__img_fourth {
+  border-radius: 8.5%;
+}
 .games__link {
   text-decoration: none;
 }
@@ -176,7 +178,7 @@ a {
 }
 .articles__height_fifth {
   height: 512px;
-  margin-top: 39px;
+  margin-top: 42px;
 }
 .articles__height_sixth {
   height: 551px;
@@ -192,7 +194,8 @@ a {
   margin-left: 32px;
 }
 .articles__name {
-  margin-left: 32px;
+  padding-left: 32px;
+  padding-top: 16px;
 }
 .articles__desc {
   display: none;
@@ -220,7 +223,6 @@ a {
   font-size: 64px;
   font-weight: 700;
   line-height: 78px;
-  padding-left: 156px;
 }
 .mini-games__articles {
   display: grid;
@@ -288,7 +290,7 @@ a {
   height: 500px;
 }
 .mini-articles__img_four {
-  border-radius: 8.5%;
+  border-radius: 47px;
 }
 
 .mini-articles__button:hover {
@@ -328,7 +330,7 @@ a {
   .heading {
     background-image: url(./imgs/Star__big_mobile.svg), url(./imgs/Star__medium_mobile.svg), url(./imgs/Star__little_mobile.svg), url(./imgs/Starmedium__right_mobile.svg), url(./imgs/Starlittle__right_mobile.svg);
     background-position: 220px -84px, 37px 97px, 91px 64px, 303px 660px, 272px 640px;
-    height: 820px;
+    height: 780px;
   }
   .header {
     font-size: 40px;
@@ -337,7 +339,7 @@ a {
     text-align: center;
     margin-top: 147px;
     margin-bottom: 18px;
-    height: 368px;
+    height: 318px;
   }
   .header__text {
     font-size: 16px;
@@ -352,7 +354,7 @@ a {
     font-weight: 400;
     line-height: 20px;
     text-align: center;
-    height: 148px;
+    height: 188px;
   }
   .header__button {
     display: block;
@@ -383,24 +385,23 @@ a {
   }
   .about {
     padding-top: 48px;
-    height: 3958px;
+    height: 3900px;
     top: 781px;
+  }
+  .about__header {
     display: none;
   }
-  /* &__header {
-  display: none;
-  color: white;
+  .about__header_mobile {
+    display: block;
+    margin-left: 16px;
+    margin-bottom: 42px;
+    font-size: 40px;
+    line-height: 49px;
+    color: white;
   }
-  &__header_mobile {
-  display: block;
-  margin-left: 16px;
-  margin-bottom: 42px;
-  font-size: 40px;
-  line-height: 49px;
+  .about__text {
+    display: none;
   }
-  &__text {
-  display: none;
-  } */
   .games {
     display: grid;
     grid-template-columns: repeat(1, 4fr);
@@ -413,6 +414,8 @@ a {
     width: 343px;
   }
   .articles {
+    display: flex;
+    align-items: center;
     gap: 12px;
     width: 343px;
     height: 545px;
@@ -421,14 +424,13 @@ a {
     height: 584px;
   }
   .articles__height_third {
-    height: 542px;
+    height: 584px;
   }
   .articles__height_fourth {
     height: 622px;
   }
   .articles__height_fifth {
     height: 580px;
-    margin-top: 0px;
   }
   .articles__height_sixth {
     height: 638px;
@@ -438,16 +440,17 @@ a {
   }
   .articles__name {
     font-size: 32px;
-    padding-top: 18px;
+    margin-top: 20px;
+    margin-bottom: 16px;
+    padding: 0;
   }
   .articles__desc {
     display: block;
-    margin-left: 32px;
   }
   .articles__button {
-    margin-left: 28px;
-    margin-top: 26px;
-    display: block;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     width: 285px;
     height: 55px;
     border-radius: 60px;
@@ -456,6 +459,23 @@ a {
     font-family: inherit;
     font-size: 16px;
     font-weight: 400;
+    margin-top: 32px;
+  }
+  .articles__mobile {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-content: center;
+  }
+  .mobile {
+    display: flex;
+    flex-direction: column;
+  }
+  .mini-games {
+    display: none;
+  }
+  .mini-articles {
+    display: none;
   }
   .footer {
     display: block;
@@ -467,7 +487,6 @@ a {
     font-weight: 600;
     line-height: 20px;
     text-align: center;
-    margin-top: 48px;
     align-content: center;
   }
 }/*# sourceMappingURL=Style.css.map */
