--- a/Style.scss
+++ b/Style.scss
@@ -107,7 +107,6 @@ body {
     padding-left: calc(50% - 600px);
     padding-right: calc(50% - 600px);
     padding-top: 94px;
-    left: 0;
     width: 100%;
     height: 1470px;
     background: rgb(32, 32, 39);
@@ -143,6 +142,9 @@ body {
     &__img {
     width: 378px;
     }
+    &__img_fourth {
+      border-radius: 8.5%;
+    }
     &__link {
       text-decoration: none;
     }
@@ -174,7 +176,7 @@ body {
     }
     &__height_fifth {
       height: 512px;
-      margin-top: 39px;
+      margin-top: 42px;
     }
     &__height_sixth {
       height: 551px;
@@ -190,7 +192,8 @@ body {
     margin-left: 32px;
     }
     &__name {
-      margin-left: 32px;
+      padding-left: 32px;
+      padding-top: 16px;
     }
     &__desc {
       display: none;
@@ -218,7 +221,6 @@ body {
     font-size: 64px;
     font-weight: 700;
     line-height: 78px;
-    padding-left: 156px;
     }
     &__articles {
     display: grid;
@@ -287,7 +289,7 @@ body {
       height: 500px;
     }
     &__img_four {
-      border-radius: 8.5%;
+      border-radius: 47px;
     }
   }
 
