--- a/_mobile.scss
+++ b/_mobile.scss
@@ -15,7 +15,7 @@
     background-image: url(./imgs/Star__big_mobile.svg), url(./imgs/Star__medium_mobile.svg), url(./imgs/Star__little_mobile.svg),
     url(./imgs/Starmedium__right_mobile.svg), url(./imgs/Starlittle__right_mobile.svg);
     background-position: 220px -84px, 37px 97px, 91px 64px, 303px 660px, 272px 640px;
-    height: 820px;
+    height: 780px;
     }
     .header {
     font-size: 40px;
@@ -24,7 +24,7 @@
     text-align: center;
     margin-top: 147px;
     margin-bottom: 18px;
-    height: 368px;
+    height: 318px;
     &__text {
     font-size: 16px;
     font-weight: 400;
@@ -38,7 +38,7 @@
     font-weight: 400;
     line-height: 20px;
     text-align: center;
-    height: 148px;
+    height: 188px;
     }
     &__button {
     display: block;
@@ -70,13 +70,10 @@
     }
     .about {
     padding-top: 48px;
-    height: 3958px;
+    height: 3900px;
     top: 781px;
+    &__header {
     display: none;
-    }
-    /* &__header {
-    display: none;
-    color: white;
     }
     &__header_mobile {
     display: block;
@@ -84,10 +81,12 @@
     margin-bottom: 42px;
     font-size: 40px;
     line-height: 49px;
+    color: white;
     }
     &__text {
     display: none;
-    } */
+    }
+}
     .games {
     display: grid;
     grid-template-columns: repeat(1, 4fr);
@@ -96,44 +95,46 @@
     justify-items: center;
     grid-column-gap: 32px;
     &__img {
-        width: 343px;
+    width: 343px;
     }
     }
     .articles {
+        display: flex;
+        align-items: center;
         gap: 12px;
         width: 343px;
         height: 545px;
         &__height_second {
-        height: 584px;
-        }
-        &__height_third {
-            height: 542px;
-        }
-        &__height_fourth {
-            height: 622px;
-        }
-        &__height_fifth {
-            height: 580px;
-            margin-top: 0px;
-        }
-        &__height_sixth {
-            height: 638px;
-        }
+            height: 584px;
+            }
+            &__height_third {
+                height: 584px;
+            }
+            &__height_fourth {
+                height: 622px;
+            }
+            &__height_fifth {
+                height: 580px;
+            }
+            &__height_sixth {
+                height: 638px;
+            }
     &__number {
         display: none;
     }    
     &__name {
         font-size: 32px;
-        padding-top: 18px;
+        margin-top: 20px;
+        margin-bottom: 16px;
+        padding: 0;
     }
     &__desc {
         display: block;
-        margin-left: 32px;
         }
     &__button {
-        margin-left: 28px;
-        margin-top: 26px;
-        display: block;
+        display: flex;
+        justify-content: center;
+        align-items: center;
         width: 285px;
         height: 55px;
         border-radius: 60px;
@@ -142,8 +143,28 @@
         font-family: inherit;
         font-size: 16px;
         font-weight: 400;
+        margin-top: 32px;
+    }
+    &__mobile {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        align-content: center;
     }
     }
+
+    .mobile {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .mini-games {
+        display: none;
+    }
+    .mini-articles {
+        display: none;
+    }
+
     .footer {
         display: block;
         width: 376px;
@@ -154,7 +175,6 @@
         font-weight: 600;
         line-height: 20px;
         text-align: center;
-        margin-top: 48px;
         align-content: center;
     }
 }
