--- a/Style.css
+++ b/Style.css
@@ -74,7 +74,6 @@ body {
   background-color: rgb(188, 236, 48);
   -webkit-backdrop-filter: blur(50px);
           backdrop-filter: blur(50px);
-  width: 3220px;
   left: 0;
   height: 90px;
   margin-top: auto;
@@ -83,9 +82,10 @@ body {
   flex-direction: row;
   align-items: center;
   background-image: url(./imgs/Star__navbar.svg), url(./imgs/Star__navbar.svg), url(./imgs/Star__navbar.svg);
-  background-position: 272px 27px, 660px 27px, 1100px 27px;
+  background-position: 284px 27px, 696px 27px, 1156px 27px;
   background-repeat: no-repeat;
-  gap: 128px;
+  gap: 152px;
+  white-space: nowrap;
 }
 .navbar__item {
   font-size: 30px;
@@ -339,7 +339,7 @@ a {
     text-align: center;
     margin-top: 147px;
     margin-bottom: 18px;
-    height: 318px;
+    height: 298px;
   }
   .header__text {
     font-size: 16px;
@@ -354,12 +354,13 @@ a {
     font-weight: 400;
     line-height: 20px;
     text-align: center;
+    padding-top: 28px;
   }
   .header__button {
     display: block;
     margin: auto;
     width: 285px;
-    height: 162px;
+    height: 85px;
     font-size: 16px;
     line-height: 141.69%;
     display: flex;
@@ -367,11 +368,11 @@ a {
     align-items: center;
   }
   .navbar {
-    height: 112px;
+    height: 100px;
     width: 375px;
     margin-top: 210px;
     gap: 88px;
-    background-position: 166px 12px;
+    background-position: 166px 20px;
     background-size: 19px 19px;
   }
   .navbar__mobile {
