--- a/_mobile.scss
+++ b/_mobile.scss
@@ -24,7 +24,7 @@
     text-align: center;
     margin-top: 147px;
     margin-bottom: 18px;
-    height: 318px;
+    height: 298px;
     &__text {
     font-size: 16px;
     font-weight: 400;
@@ -38,12 +38,13 @@
     font-weight: 400;
     line-height: 20px;
     text-align: center;
+    padding-top: 28px;
     }
     &__button {
     display: block;
     margin: auto;
     width: 285px;
-    height: 162px;
+    height: 85px;
     font-size: 16px;
     line-height: 141.69%;
     display: flex;
@@ -52,11 +53,11 @@
     }
     }
     .navbar {
-    height: 112px;
+    height: 100px;
     width: 375px;
     margin-top: 210px;
     gap: 88px;
-    background-position: 166px 12px;
+    background-position: 166px 20px;
     background-size: 19px 19px;
     &__mobile {
     display: none;
