--- a/_mobile.scss
+++ b/_mobile.scss
@@ -186,3 +186,18 @@
     margin-top: 0px;
   }
 }
+
+@media (max-width: 978px) and (min-width: 767px) {
+  .center {
+    padding-left: calc(50% - 978px / 2);
+    padding-right: calc(50% - 978px / 2);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex-wrap: nowrap;
+    background-size: cover;
+    background-attachment: fixed;
+    background-position: center;
+    overflow-x: hidden;
+  }
+}
